# StaubsaugerbeutelNet

./: README.md  notizen.md  pom.xml
ocr/: '  notizen.md  ocr.py  pyproject.toml  walk.py
src/main/java/staubsaugerbeutelnet/de/staub/: HelloController.java  StaubApplication.java
src/main/java/staubsaugerbeutelnet/de/staub/controllers/: HomeController.java
src/main/java/staubsaugerbeutelnet/de/staub/model/: Vacuum.java
src/main/resources/: application.properties
src/main/resources/static/: styles.css
src/main/resources/templates/: index.html
src/main/resources/templates/fragments/: footer.html  header.html  navbar.html
src/test/java/staubsaugerbeutelnet/de/staub/: StaubApplicationTests.java
