[project]
name = "ocr"
version = "0.1.0"
description = ""
authors = [
    {name = "furukawa",email = "denden@outlook.de"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "psycopg2 (>=2.9.10,<3.0.0)",
    "easyocr (>=1.7.2,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
